[project]
name = "risteys-analytics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "n", email = "n@example.com" }
]
dependencies = [
    "polars==0.20.7",
    "jupyterlab==4.1.0",
    "altair==5.2.0",
    "pyarrow==15.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython==8.12.3",
    "pyright==1.1.350",
    "visidata==3.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/risteys_analytics"]

[tool.pyright]
include = ["src"]
