[project]
name = "risteys-analytics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vincent", email = "vincent-octo@users.noreply.github.com" }
]
dependencies = [
    "polars>=1.15.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
hello = "risteys_analytics:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython==8.12.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/risteys_analytics"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.12.3",
]
