[project]
name = "risteys-analytics2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vincent", email = "vincent-octo@users.noreply.github.com" }
]
dependencies = [
    "polars==0.20.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "risteys_analytics2:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/risteys_analytics2"]
