[project]
name = "sketch-kanta-lab-data-prep"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vincent", email = "vincent-octo@users.noreply.github.com" }
]
dependencies = [
    "ipython>=8.12.3",
    "polars>=0.20.13",
    "numpy>=1.24.4",
    "jupyter>=1.0.0",
    "altair>=5.2.0",
    "pyarrow>=15.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "sketch_kanta_lab_data_prep:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sketch_kanta_lab_data_prep"]
