[project]
name = "risteys-kanta-lab-pipeline"
version = "0.1.0"
description = "Pipeline code for computing statistics on the Kanta Lab dataset"
authors = [
    { name = "Vincent", email = "vincent-octo@users.noreply.github.com" }
]
dependencies = [
    "polars==0.20.23",
    "numpy==1.26.4",
]
readme = "README.md"
requires-python = ">= 3.11"  # We depend on tomllib, which was added to stdlib in 3.11

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython==8.24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kanta_lab"]
